filmes design update, sidebar dark mode fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -848,6 +848,12 @@ select {
 .-mr-2 {
   margin-right: -0.5rem;
 }
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mb-12 {
+  margin-bottom: 3rem;
+}
 .block {
   display: block;
 }
@@ -1023,6 +1029,9 @@ select {
 }
 .flex-wrap {
   flex-wrap: wrap;
+}
+.content-center {
+  align-content: center;
 }
 .items-end {
   align-items: flex-end;
